--- a/h/css/sidebar.scss
+++ b/h/css/sidebar.scss
@@ -145,6 +145,7 @@ svg { -webkit-tap-highlight-color: rgba(255, 255, 255, 0); }
     border-bottom-left-radius: 2px;
     border-top-right-radius: 2px;
     border-bottom-right-radius: 2px;
+    a.pushed { color: $hypothered; }
 
 }
 
