--- a/h/css/base.scss
+++ b/h/css/base.scss
@@ -70,7 +70,7 @@ $positive: #3aab39;
 $negative: #d11c2b;
 $neutral: #0171ba;
 
-//OTHER VARIABLES
+//OTHER VARIABLES - wtf2
 $highlightColor: rgba(201, 215, 241, .5);
 $highlightModeColor: rgba(255, 255, 60, .5);
 $thread-padding: 1em;
